--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -16,7 +16,7 @@ jobs:
                   run: chmod +x ./gradlew
 
                 - name: Build Release APK with Gradle
-                  run: ./gradlew clean bundleRelease
+                  run: sudo ./gradlew clean bundleRelease
                 
                 - name: Build release
                   uses: r0adkll/sign-android-release@v1
