--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -33,4 +33,4 @@ jobs:
                         serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
                         packageName: com.josealfonsomora.mishorasextras
                         releaseFile: app/build/outputs/bundle/release/app-release.aab
-                        track: alpha
+                        track: beta
